src/static/src/styles/style.css
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

h1,
p,
body {
  margin: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  min-height: 100vh;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-weight: 400;
  font-size: 0.875rem;
}

.app {
  display: flex;
  flex: 1 1 auto;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-flow: column;
}

.header {
  color: #ffffff;
  font-weight: 400;
  font-size: 4rem;
  padding: 32px;
  display: flex;
  justify-content: space-between;
  position: relative;
}

.image-credit {
  font-size: 1rem;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.7);
  writing-mode: vertical-rl;
  transform: rotate(-180deg);
  position: fixed;
  right: 12px;
  bottom: 20px;
  white-space: nowrap;
}

.isDragging * {
  pointer-events: none;
}

.main {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  color: #fff;
  position: absolute;
  bottom: 32px;
}

.upload-form {
  display: flex;
  flex-direction: column;
  gap: 16px;
  align-self: center;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 15px;
  backdrop-filter: blur(18px);
  -webkit-backdrop-filter: blur(18px);
  padding: 24px;
  max-width: 100%;
  height: 100%;
  margin: 0 32px;
}

.upload-form a {
  font-weight: bold;
  color: #fff;
}

.upload-form p:last-of-type {
  margin-bottom: 0;
}

.upload-form legend {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.upload-form h1 {
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 24px;
}

@media (min-width: 480px) {
  .main {
    max-width: 390px;
    align-self: flex-start;
  }
}

.dropzone {
  width: 100%;
  height: 125px;
  border-radius: 4px;
  background: rgba(255, 255, 255, 0.17);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.dropzone span {
  color: #fff;
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
}

.file-upload-button {
  width: 100%;
  height: 40px;
  background: inherit;
  border-radius: 8px;
  border: none;
  color: inherit;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 1rem;
  color: #fff;
}

.drag-drop-overlay {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  text-align: center;
  color: #fff;
}

.drag-drop-overlay h1 {
  font-size: 3.5rem;
  font-weight: 800;
}

.drag-drop-overlay p {
  font-size: 1.5rem;
  font-weight: 400;
}

.settings {
  position: relative;
  align-self: center;
  max-width: 350px;
  color: #fff;
  background: rgba(255, 255, 255, 0.1);
  margin: auto 0;
  backdrop-filter: blur(18px);
  -webkit-backdrop-filter: blur(18px);
  padding: 24px;
  border-radius: 15px;
}

.settings h1 {
  font-size: 1.25rem;
  font-weight: 600;
}

.language-description {
  font-size: 0.825rem;
  font-weight: 400;
  margin: 8px 0px;
}

.button-cancel {
  position: absolute;
  right: 0;
  top: 0;
  border: none;
  background: none;
  padding: 8px;
  cursor: pointer;
}

.file-info {
  display: flex;
  flex-direction: row;
  border: 2px solid rgba(255, 255, 255, 0.17);
  padding: 2px 4px;
  border-radius: 4px;
  gap: 4px;
}

.file-info svg {
  flex: none;
}

.file-info p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.email-input {
  margin: 16px 0;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.email-input label {
  font-size: 1rem;
  font-weight: 400;
}

.email-description {
  font-size: 0.825rem;
  font-weight: 400;
  margin: 8px 0px;
}

.email-input input {
  padding: 10px 12px;
  border-radius: 8px;
  border: none;
  background: rgba(255, 255, 255, 0.17);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
}

.email-input input::placeholder {
  color: #fff;
}

.select-dropdown {
  padding: 10px 12px;
  margin: 16px 0;
  border-radius: 8px;
  border: none;
  background: rgba(255, 255, 255, 0.17);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
  width: 100%;
  cursor: pointer;
  text-transform: capitalize;
}

.button-upload {
  margin: 0 0 16px 0;
  padding: 10px 12px;
  border-radius: 8px;
  border: none;
  background: rgba(255, 255, 255, 0.17);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
  width: 100%;
  cursor: pointer;
}

.button-upload:disabled {
  background: rgba(255, 255, 255, 0.1);
  cursor: not-allowed;
}

.error {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
  color: #fff;
}

.error h1 {
  font-size: 3.5rem;
  font-weight: 800;
}

.error p {
  font-size: 1.5rem;
  font-weight: 400;
}

.error button {
  padding: 8px 26px;
  border-radius: 8px;
  border: none;
  background: rgba(255, 255, 255, 0.17);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  margin: 16px 0px;
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
  cursor: pointer;
}

.no-script {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  text-align: center;
  color: #fff;
  background-color: #dd0000;
}

.no-script h1 {
  font-size: 3.5rem;
  font-weight: 800;
}

.no-script p {
  font-size: 1.5rem;
  font-weight: 400;
}

option {
  color: black;
}

